networking/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: forgejo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-service
                port:
                  number: 3000
